--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //photoviewer
+//    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
